--- a/tags.html
+++ b/tags.html
@@ -13,9 +13,11 @@ group: navigation
 
 
 {% for tag in site.tags %} 
-  <h2 id="{{ tag[0] }}-ref">{{ tag[0] }}</h2>
-  <ul>
+<div class="page-block">
+  <h2 class="article-year" id="{{ tag[0] }}-ref">{{ tag[0] }}</h2>
+  <ul class="unstyled page-list">
     {% assign pages_list = tag[1] %}  
     {% include JB/pages_list %}
   </ul>
+</div>
 {% endfor %}
