--- a/404.html
+++ b/404.html
@@ -1,1 +1,49 @@
-Sorry this page does not exist =(
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>404 - MrSaxon's Blog</title>
+    <meta name="description" content="">
+	<meta name="author" content="saxon.zh@gmail.com">
+
+    <!-- Enable responsive viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Le styles -->
+    <link href="/assets/themes/twitter/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
+    <link href="/assets/themes/twitter/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+
+    <!-- Le fav and touch icons -->
+  <!-- Update these with your own images
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+  -->
+  <style>
+	.title {padding-top: 100px;}
+	.title>h1 {color: #c7c7c7;}
+  </style>
+  </head>
+
+  <body>
+    <div class="container-narrow">
+		<div class="row-fluid title">
+			<h1>404 Page Not Found!</h1>
+		</div>
+		<div class="row-fluid">
+		  <div class="content span3 pull-left" style="width: 190px;">
+			  <img src="/assets/images/xiaochunjie.png" class="img-rounded">
+		  </div>
+		  <div class="content span9 pull-left" style="min-height: 189px;text-align: center;padding: 50px;">
+			  <h3>Sorry!~~!~!!该页面节操已碎，请<a href="/">点此</a>修复。<h3>
+		  </div>
+		</div>
+	</div>
+  </body>
+</html>
